# gitnow

./: .gitignore  .goreleaser.yaml  CHANGELOG.md  Cargo.toml  Dockerfile.release  README.md  buf.gen.yaml  buf.yaml  cuddle.yaml  mise.toml
.gitea/workflows/: release.yaml
crates/gitnow/: Cargo.toml
crates/gitnow/include/shell/: zsh.sh
crates/gitnow/proto/gitnow/v1/: gitnow.proto
crates/gitnow/src/: app.rs  cache.rs  cache_codec.rs  chooser.rs  commands.rs  components.rs  config.rs  custom_command.rs  fuzzy_matcher.rs  git_clone.rs  git_provider.rs  interactive.rs  main.rs  project_metadata.rs  projects_list.rs  shell.rs  template_command.rs  worktree.rs
crates/gitnow/src/commands/: project.rs  root.rs  shell.rs  skill.rs  update.rs  worktree.rs
crates/gitnow/src/commands/shell/: zsh.rs
crates/gitnow/src/components/: inline_command.rs  spinner.rs
crates/gitnow/src/git_provider/: gitea.rs  github.rs
crates/gitnow/src/projects_list/: example_projects.rs
examples/config/: git-worktrees.toml  gitnow.toml  jj-worktrees.toml
scripts/: install.sh  record.sh  update-gifs.sh
templates/default/: SPEC.md
vhs/: example.vhs
